<resources>

    <string name="app_name">Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_my_friend_list">MyFriendList</string>
    <string name="nextButton">Next</string>
    <string name="OptionradioButtonA">Here goes option A</string>
    <string name="OptionradioButtonB">here goes option B</string>
    <string name="OptionradioButtonC">here goes option C</string>
    <string name="OptionradioButtonD">here goes option D</string>
    <string name="questionCounter">1234567</string>
    <string name="questionText">Question goes here ???</string>
    <string name="questClockCounter">00</string>
    <string name="backButton">Back</string>
    <string name="title_activity_quiz_main">QuizMain</string>
    <string name="welcomeText">Welcome to the world of quizes.The purpose of this application is to make learning fun and practical exam environment oriented.Most of the Students 
      have the answer of the questions but because of bad time management they are not able to finish all the problem.This app consists of Quizes  bases on the particular subject and user can upload the score and review where he/she stands among others.</string>
    <string name="welcomeLabel">Welcome to Quiz</string>
    <string name="instructionLabel">Instructions</string>
    <string name="instructionText"> 1. Time for each quiz would be 30 minutes."\n"
        2. All questions are single answer questions."\n"
        3. You are not allowed to edit the answer once u moved forward without skipping a particular quetion."\n"
        4. You can skip the question by long pressing Next Button."\n"
        5. You can select the particular subject and topic."\n"
        6. No Negative marking."\n"</string>
    <string name="startButton">Start</string>
    <string name="unknownHostMsg">Host is available at this time please try again later.</string>
    <!--
    <string name="hostUri">mongodb://ds037447.mongolab.com:37447</string>
    <string name="hostuser">ranjodh</string>
    <string name="hostpass">ranjodh</string>
    -->

    <string name="title_activity_result">ResultActivity</string>

    <string name="resultLabel">Result</string>

</resources>